--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=Republic_C207
 DB_NAME=c372_supermarketdb
+
+# PayPal REST app (Sandbox)
+PAYPAL_CLIENT_ID=AfDw8uwnf7K05uG1wz2uCGdGVpLRuuVg4H8dzRoKnhpH3JIc7pru-bjSNDqrIW6ByX-71w_TZKJkpiSD
+PAYPAL_CLIENT_SECRET=EL92o2-AgBV_1SljfFX2aYQphFa1sBTxQh1MpHY_Y7rE4BvszeplV6Tuaebm9oOpI4jyiGApjWt6XY34
+PAYPAL_ENVIRONMENT=SANDBOX
+PAYPAL_API=https://api.sandbox.paypal.com
