--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-pdf": "^3.0.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10"
   },
   "description": ""
