--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ PAYPAL_CLIENT_ID=AfDw8uwnf7K05uG1wz2uCGdGVpLRuuVg4H8dzRoKnhpH3JIc7pru-bjSNDqrIW6
 PAYPAL_CLIENT_SECRET=EL92o2-AgBV_1SljfFX2aYQphFa1sBTxQh1MpHY_Y7rE4BvszeplV6Tuaebm9oOpI4jyiGApjWt6XY34
 PAYPAL_ENVIRONMENT=SANDBOX
 PAYPAL_API=https://api.sandbox.paypal.com
+
+#NETS
+#Use the API key from OPENAPIPASS
+API_KEY=z4DE5jpqBVmXx8y9vNcn
+
+#Use the Project id from OPENAPIPASS
+PROJECT_ID=6bdb221e-c4ba-4bc8-b7d1-cab510faa39d
