--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.3",
